--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img id="meme1" class="w-48 m-auto" src="sulixi.png" alt="" />
         <img id="meme2" class="w-48 m-auto hide" src="sulixi.png".png" alt="" />
         <img id="meme3" class="w-48 m-auto hide" src="camlix.png" alt="" />
-        <img id="meme4" class="w-48 m-auto hide" src="camlix.png" alt="" />
+        <img id="meme4" class="w-48 m-auto hide" src="suqr.png" alt="" />
       </div>
       <div class="m-auto text-center mt-20">
         <button
@@ -147,7 +147,7 @@
         html: `<div>STK MB Bank nha:</div><div>${bank ?? ""}</div><div>${
           stk ?? "0332385345"
         }</div>`,
-        imageUrl: "camlix.png",
+        imageUrl: "suqr.png",
         imageWidth: 200,
         showCancelButton: false,
         confirmButtonColor: "#3085d6",
